<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="recordModel"
            type="com.internship.firstweekapp.retrofit.Record" />

        <variable
            name="viewModel"
            type="com.internship.firstweekapp.ui.record_detail.RecordDetailFragmentViewModel" />

    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/idTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/generic"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/genTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/spec_name"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/spTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sub_spec_name"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/sspTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/english_name"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/enTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recordist"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/recTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cntTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/locality"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/locTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/latTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/lngTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sound_type"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/typeTextView" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="@{() -> viewModel.playPause()}"
            android:tint="@color/purple_500"
            android:src="@{viewModel.isPlay()? @drawable/ic_baseline_pause_circle_filled_24 : @drawable/ic_baseline_play_circle_24}"
            app:layout_constraintTop_toTopOf="@id/fileNameTextView"
            app:layout_constraintBottom_toBottomOf="@id/fileNameTextView"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/license"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/licTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/record_quality"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/qTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/length"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/lengthTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/timeTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/dateTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/uploaded"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/uploadedTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/also"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/alsoTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/remark"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/rmkTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bird_identified"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/seenTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/was_playback_used"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/playbackTextView" />


        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:orientation="vertical"
            app:constraint_referenced_ids="idTextView, genTextView, spTextView, sspTextView, enTextView, recTextView, cntTextView, locTextView, latTextView, lngTextView, typeTextView, image, fileNameTextView, licTextView, qTextView, lengthTextView, timeTextView, dateTextView, uploadedTextView, alsoTextView, rmkTextView, seenTextView, playbackTextView"
            app:flow_verticalGap="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/idTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{Integer.toString(recordModel.id)}"
            tools:text="33\n44" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/genTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{recordModel.gen}"
            tools:ignore="MissingConstraints"
            tools:text="33" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/spTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{recordModel.sp.length() > 0 ? recordModel.sp : @string/alternate}"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sspTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{recordModel.ssp.length() > 0 ? recordModel.ssp : @string/alternate}"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/enTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{recordModel.en.length() > 0 ? recordModel.en : @string/alternate}"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/recTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{recordModel.rec.length() > 0 ? recordModel.rec : @string/alternate}"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cntTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{recordModel.cnt.length() > 0 ? recordModel.cnt : @string/alternate}"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/locTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{recordModel.loc.length() > 0 ? recordModel.loc : @string/alternate}"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/latTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{recordModel.lat.length() > 0 ? recordModel.lat : @string/alternate}"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lngTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{recordModel.lng.length() > 0 ? recordModel.lng : @string/alternate}"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/typeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{recordModel.type.length() > 0 ? recordModel.type : @string/alternate}"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fileNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:onClick="@{() -> viewModel.downloadClick()}"
            android:textColor="@color/teal_200"
            android:text="@{recordModel.file_name}"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/licTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{recordModel.lic.length() > 0 ? recordModel.lic : @string/alternate}"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/qTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{recordModel.q.length() > 0 ? recordModel.q : @string/alternate}"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lengthTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{recordModel.length.length() > 0 ? recordModel.length : @string/alternate}"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/timeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{recordModel.time.length() > 0 ? recordModel.time : @string/alternate}"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dateTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{recordModel.date.length() > 0 ? recordModel.date : @string/alternate}"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/uploadedTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{recordModel.uploaded.length() > 0 ? recordModel.uploaded : @string/alternate}"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/alsoTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:setAlsoBlock="@{recordModel.also}"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/rmkTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{recordModel.rmk.length() > 0 ? recordModel.rmk : @string/alternate}"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/seenTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{recordModel.bird_seen.length() > 0 ? recordModel.bird_seen : @string/alternate}"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/playbackTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{recordModel.playback_used.length() > 0 ? recordModel.playback_used : @string/alternate}"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>