<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />
        <import type="com.internship.firstweekapp.ui.search.SearchType" />

        <variable
            name="viewModel"
            type="com.internship.firstweekapp.ui.search.SearchFragmentViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            setPosition="@={viewModel.searchType}"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normaly_search"/>
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advanced_search"/>

        </com.google.android.material.tabs.TabLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/searchInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/searchButton"
            app:layout_constraintTop_toBottomOf="@id/tabs">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.mainSearchField}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/additionalFieldsRecycler"
            android:layout_width="match_parent"
            android:adapter="@{viewModel.adapter}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            setItems="@={viewModel.optionalSearchField}"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.searchType == SearchType.Advanced ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toBottomOf="@id/searchInputLayout"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:onClick="@{() -> viewModel.searchClick()}"
            app:layout_constraintTop_toTopOf="@id/searchInputLayout"
            app:layout_constraintBottom_toBottomOf="@id/searchInputLayout"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>